# lwpkt

./: .gitignore  CHANGELOG.md  CMakeLists.txt  library.json
.github/workflows/: build-and-test.yml
dev/: main.c
docs/: conf.py
docs/user-manual/: index.rst
examples/: example_lwpkt.c  example_lwpkt_evt.c
lwpkt/src/include/lwpkt/: lwpkt.h  lwpkt_opt.h  lwpkt_opts_template.h
lwpkt/src/lwpkt/: lwpkt.c
python/: lwpkt.py
test/: lwpkt_test.c
tests/: CMakeLists.txt  test.py  test_file.c  test_main.c
tests/dynamic/: cmake.cmake  lwpkt_opts.h
tests/static_all_disabled/: cmake.cmake  lwpkt_opts.h
tests/static_all_enabled/: cmake.cmake  lwpkt_opts.h
tests/static_mix/: cmake.cmake  lwpkt_opts.h
